welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: unclosed character literal
  var direction = 'gauche'
                         ^ZigZag:14: error: unclosed character literal
    if (direction == 'gauche') {
                            ^ZigZag:23: error: unclosed character literal
        direction = 'droite'
                           ^ZigZag:26: error: unclosed character literal
    if (direction == 'droite') {
                            ^ZigZag:35: error: unclosed character literal
        direction = 'gauche'
                           ^ZigZag:4: error: ';' expected but something found.
  var direction = 'gauche'
                         ^ZigZag:14: error: ')' expected but something found.
    if (direction == 'gauche') {
                            ^